@@ -47,6 +47,8 @@ class Canvas(Surface):
         self.preventContextMenu()
         self.evt = self.event.eventObj
         self.modKey = self.event.modKey
+        self.keyRepeat = self.event.keyRepeat
+        self.keyHeld = self.event.keyHeld
         self.mouse_entered = True
         self.event._initiate_touch_listener(self)
         self._touch_callback = self.event.touchlistener.callback
@@ -112,17 +114,43 @@ class Canvas(Surface):
         event.preventDefault()
 
     def onKeyDown(self, event):
-        if event.js_type in self.event.events:
-            self.event._updateQueue(self.evt[event.js_type](event))
         if event.keyCode in self.modKey:
             self.event.keyPress[event.keyCode] = True
+        if event.js_type in self.event.events:
+            if not self._isPaused(event.keyCode):
+                self.event._updateQueue(self.evt[event.js_type](event))
         event.preventDefault()
 
     def onKeyUp(self, event):
-        if event.js_type in self.event.events:
-            self.event._updateQueue(self.evt[event.js_type](event))
         if event.keyCode in self.modKey:
             self.event.keyPress[event.keyCode] = False
+        self.keyHeld[event.keyCode]['pressed'] = False
+        if event.js_type in self.event.events:
+            self.event._updateQueue(self.evt[event.js_type](event))
+
+    def _isPaused(self, keycode):
+        if keycode not in self.keyHeld:
+            self.keyHeld[keycode] = {'pressed':False, 'delay':False, 'time':0}
+        key = self.keyHeld[keycode]
+        if not key['pressed']:
+            key['pressed'] = True
+            paused = False
+            if self.keyRepeat[0]:
+                key['delay'] = True
+                key['time'] = self.time.time()
+        else:
+            paused = True
+            if self.keyRepeat[0]:
+                time = self.time.time()
+                if key['delay']:
+                    if time - key['time'] > self.keyRepeat[0]:
+                        key['time'] = time
+                        key['delay'] = False
+                        paused = False
+                elif time - key['time'] > self.keyRepeat[1]:
+                    key['time'] = time
+                    paused = False
+        return paused
 
     def onTouchInitiate(self, event):
         self.event.touchlistener.activate()
