@@ -13,6 +13,8 @@ class Key(object):
     
     * pyjsdl.key.name
     * pyjsdl.key.get_mods
+    * pyjsdl.key.set_repeat
+    * pyjsdl.key.get_repeat
     """
 
     def __init__(self):
@@ -50,12 +52,34 @@ class Key(object):
         """
         return self.keyMod[self.alt][self.keyPress[self.alt]] | self.keyMod[self.ctrl][self.keyPress[self.ctrl]] | self.keyMod[self.shift][self.keyPress[self.shift]]
 
+    def set_repeat(self, delay=0, interval=0):
+        """
+        Set key repeat delay (ms) and interval (ms) settings.
+        Key repeat initially disabled.
+        """
+        if delay < 0 or interval < 0:
+            raise ValueError('repeat settings must be positive integers')
+        if not delay:
+            env.event.keyRepeat[0] = 0
+            env.event.keyRepeat[1] = 0
+        else:
+            env.event.keyRepeat[0] = delay
+            if interval:
+                env.event.keyRepeat[1] = interval
+            else:
+                env.event.keyRepeat[1] = delay
+        return None
+
+    def get_repeat(self):
+        """
+        Get key repeat settings.
+        """
+        return env.event.keyRepeat
+
     def _nonimplemented_methods(self):
         self.get_focused = lambda *arg: None
         self.get_pressed = lambda *arg: None
         self.set_mods = lambda *arg: None
-        self.set_repeat = lambda *arg: None
-        self.get_repeat = lambda *arg: True
 
 
 _charCode = {33:Const.K_EXCLAIM, 34:Const.K_QUOTEDBL, 35:Const.K_HASH, 36:Const.K_DOLLAR, 38:Const.K_AMPERSAND, 39:Const.K_QUOTE, 40:Const.K_LEFTPAREN, 41:Const.K_RIGHTPAREN, 42:Const.K_ASTERISK, 43:Const.K_PLUS, 44:Const.K_COMMA, 45:Const.K_MINUS, 46:Const.K_PERIOD, 97:Const.K_a, 98:Const.K_b, 99:Const.K_c, 100:Const.K_d, 101:Const.K_e, 102:Const.K_f, 103:Const.K_g, 104:Const.K_h, 105:Const.K_i, 106:Const.K_j, 107:Const.K_k, 108:Const.K_l, 109:Const.K_m, 110:Const.K_n, 111:Const.K_o, 112:Const.K_p, 113:Const.K_q, 114:Const.K_r, 115:Const.K_s, 116:Const.K_t, 117:Const.K_u, 118:Const.K_v, 119:Const.K_w, 120:Const.K_x, 121:Const.K_y, 122:Const.K_z}
