@@ -20,6 +20,7 @@
 -add mixer channel endevent.
 -add mixer channel queue.
 -refactor event handler for performance.
+-add key set_repeat method.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
